ressources/production/apps/onetimesecret/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: onetimesecret
  labels:
    app: onetimesecret
    component: frontend
  name: onetimesecret
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: secret-eighty-three-me-tls
      hosts:
        - secret.eighty-three.me
  rules:
  - host: secret.eighty-three.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onetimesecret
            port:
              number: 7143
